// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderComponent should show "user" @Input 1`] = `
<app-header
  changeLanguage={[Function EventEmitter]}
  loggedIn={[Function Boolean]}
  showLoader="false"
  toggleSideNave={[Function EventEmitter]}
  user={[Function Object]}
>
  <header
    class="header"
  >
    <mat-toolbar
      class="mat-toolbar mat-primary mat-toolbar-single-row"
      color="primary"
      ng-reflect-color="primary"
    >
      <button
        class="mat-icon-button ng-tns-c32-0 _mat-animation-noopable"
        mat-icon-button=""
      >
        <span
          class="mat-button-wrapper"
        >
          <mat-icon
            aria-hidden="true"
            aria-label="view_headline"
            class="mat-icon ng-tns-c32-0 material-icons"
            role="img"
          >
            view_headline
          </mat-icon>
        </span>
        <div
          class="mat-button-ripple mat-ripple mat-button-ripple-round"
          matripple=""
          ng-reflect-centered="true"
          ng-reflect-disabled="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        />
        <div
          class="mat-button-focus-overlay"
        />
      </button>
      <span
        class="header__main ng-tns-c32-0"
      >
        <a
          class="logo"
          href="/"
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          routerlink="/"
        >
          conduit.logo
        </a>
      </span>
      
      
      <span
        class="d-none d-md-block ng-tns-c32-0 ng-star-inserted"
      >
        <a
          aria-disabled="false"
          class="ng-tns-c32-0 mat-button _mat-animation-noopable"
          href="/"
          mat-button=""
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="home"
              class="mat-icon ng-tns-c32-0 material-icons"
              role="img"
            >
              home
            </mat-icon>
             conduit.menu.home 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c32-0 mat-button _mat-animation-noopable"
          href="/editor"
          mat-button=""
          ng-reflect-link-params="/editor"
          ng-reflect-router-link="/editor"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/editor"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="edit"
              class="mat-icon ng-tns-c32-0 material-icons"
              role="img"
            >
              edit
            </mat-icon>
             conduit.menu.newarticle 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/editor"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c32-0 mat-button _mat-animation-noopable"
          href="/settings"
          mat-button=""
          ng-reflect-link-params="/settings"
          ng-reflect-router-link="/settings"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/settings"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="settings"
              class="mat-icon ng-tns-c32-0 material-icons"
              role="img"
            >
              settings
            </mat-icon>
             conduit.menu.settings 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/settings"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c32-0 mat-button _mat-animation-noopable"
          href="/profile/usernam"
          mat-button=""
          ng-reflect-link-params="/profile,usernam"
          ng-reflect-router-link="/profile,usernam"
          ng-reflect-router-link-active="mat-accent"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
             usernam 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/profile/usern"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
      </span>
      <span
        class="header_lang d-block d-md-none mr-2 ng-tns-c32-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c37-1 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-8"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c37-1 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
      
      <div
        class="header__avatar ng-tns-c32-0 ng-trigger ng-trigger-avatarInOut ng-star-inserted ng-animating"
        style=""
      >
        <a
          class="ng-tns-c32-0"
          href="/profile/usernam"
          ng-reflect-link-params="/profile,usernam"
          ng-reflect-router-link="/profile,usernam"
        >
          <img
            alt="usernam"
            appavatar="true"
            class="ng-tns-c32-0"
            src="image"
          />
        </a>
      </div>
      <span
        class="header_lang d-none d-md-block ng-tns-c32-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c37-2 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-9"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c37-2 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
    </mat-toolbar>
    <div
      class="d-block d-md-none header__mobile"
    >
      <mat-toolbar
        class="mat-toolbar mat-primary mat-toolbar-single-row"
        color="primary"
        ng-reflect-color="primary"
      >
        
        
        <span
          class="header__menu-wrap ng-tns-c32-0 ng-star-inserted"
        >
          <div
            class="header__menu-links"
          >
            <a
              aria-disabled="false"
              class="ng-tns-c32-0 mat-button _mat-animation-noopable"
              href="/"
              mat-button=""
              ng-reflect-link-params="/"
              ng-reflect-router-link="/"
              ng-reflect-router-link-active="mat-accent"
              ng-reflect-router-link-active-options="[object Object]"
              routerlink="/"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="home"
                  class="mat-icon ng-tns-c32-0 material-icons"
                  role="img"
                >
                  home
                </mat-icon>
                 conduit.menu.home 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c32-0 mat-button _mat-animation-noopable"
              href="/editor"
              mat-button=""
              ng-reflect-link-params="/editor"
              ng-reflect-router-link="/editor"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/editor"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="edit"
                  class="mat-icon ng-tns-c32-0 material-icons"
                  role="img"
                >
                  edit
                </mat-icon>
                 conduit.menu.newarticle 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/editor"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c32-0 mat-button _mat-animation-noopable"
              href="/settings"
              mat-button=""
              ng-reflect-link-params="/settings"
              ng-reflect-router-link="/settings"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/settings"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="settings"
                  class="mat-icon ng-tns-c32-0 material-icons"
                  role="img"
                >
                  settings
                </mat-icon>
                 conduit.menu.settings 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/settings"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c32-0 mat-button _mat-animation-noopable"
              href="/profile/usernam"
              mat-button=""
              ng-reflect-link-params="/profile,usernam"
              ng-reflect-router-link="/profile,usernam"
              ng-reflect-router-link-active="mat-accent"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                usernam
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/profile/usern"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
          </div>
        </span>
      </mat-toolbar>
    </div>
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="app-preloader mat-progress-bar mat-primary _mat-animation-noopable"
      hidden=""
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-4"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-4')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
  </header>
</app-header>
`;

exports[`HeaderComponent should show header for logged in user by "loggedIn" @Input equals to true 1`] = `
<app-header
  changeLanguage={[Function EventEmitter]}
  loggedIn={[Function Boolean]}
  showLoader="false"
  toggleSideNave={[Function EventEmitter]}
  user={[Function Object]}
>
  <header
    class="header"
  >
    <mat-toolbar
      class="mat-toolbar mat-primary mat-toolbar-single-row"
      color="primary"
      ng-reflect-color="primary"
    >
      <button
        class="mat-icon-button ng-tns-c48-0 _mat-animation-noopable"
        mat-icon-button=""
      >
        <span
          class="mat-button-wrapper"
        >
          <mat-icon
            aria-hidden="true"
            aria-label="view_headline"
            class="mat-icon ng-tns-c48-0 material-icons"
            role="img"
          >
            view_headline
          </mat-icon>
        </span>
        <div
          class="mat-button-ripple mat-ripple mat-button-ripple-round"
          matripple=""
          ng-reflect-centered="true"
          ng-reflect-disabled="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        />
        <div
          class="mat-button-focus-overlay"
        />
      </button>
      <span
        class="header__main ng-tns-c48-0"
      >
        <a
          class="logo"
          href="/"
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          routerlink="/"
        >
          conduit.logo
        </a>
      </span>
      
      
      <span
        class="d-none d-md-block ng-tns-c48-0 ng-star-inserted"
      >
        <a
          aria-disabled="false"
          class="ng-tns-c48-0 mat-button _mat-animation-noopable"
          href="/"
          mat-button=""
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="home"
              class="mat-icon ng-tns-c48-0 material-icons"
              role="img"
            >
              home
            </mat-icon>
             conduit.menu.home 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c48-0 mat-button _mat-animation-noopable"
          href="/editor"
          mat-button=""
          ng-reflect-link-params="/editor"
          ng-reflect-router-link="/editor"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/editor"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="edit"
              class="mat-icon ng-tns-c48-0 material-icons"
              role="img"
            >
              edit
            </mat-icon>
             conduit.menu.newarticle 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/editor"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c48-0 mat-button _mat-animation-noopable"
          href="/settings"
          mat-button=""
          ng-reflect-link-params="/settings"
          ng-reflect-router-link="/settings"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/settings"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="settings"
              class="mat-icon ng-tns-c48-0 material-icons"
              role="img"
            >
              settings
            </mat-icon>
             conduit.menu.settings 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/settings"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c48-0 mat-button _mat-animation-noopable"
          href="/profile/usernam"
          mat-button=""
          ng-reflect-link-params="/profile,usernam"
          ng-reflect-router-link="/profile,usernam"
          ng-reflect-router-link-active="mat-accent"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
             usernam 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/profile/usern"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
      </span>
      <span
        class="header_lang d-block d-md-none mr-2 ng-tns-c48-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c53-1 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-12"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c53-1 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
      
      <div
        class="header__avatar ng-tns-c48-0 ng-trigger ng-trigger-avatarInOut ng-star-inserted ng-animating"
        style=""
      >
        <a
          class="ng-tns-c48-0"
          href="/profile/usernam"
          ng-reflect-link-params="/profile,usernam"
          ng-reflect-router-link="/profile,usernam"
        >
          <img
            alt="usernam"
            appavatar="true"
            class="ng-tns-c48-0"
            src="image"
          />
        </a>
      </div>
      <span
        class="header_lang d-none d-md-block ng-tns-c48-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c53-2 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-13"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c53-2 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
    </mat-toolbar>
    <div
      class="d-block d-md-none header__mobile"
    >
      <mat-toolbar
        class="mat-toolbar mat-primary mat-toolbar-single-row"
        color="primary"
        ng-reflect-color="primary"
      >
        
        
        <span
          class="header__menu-wrap ng-tns-c48-0 ng-star-inserted"
        >
          <div
            class="header__menu-links"
          >
            <a
              aria-disabled="false"
              class="ng-tns-c48-0 mat-button _mat-animation-noopable"
              href="/"
              mat-button=""
              ng-reflect-link-params="/"
              ng-reflect-router-link="/"
              ng-reflect-router-link-active="mat-accent"
              ng-reflect-router-link-active-options="[object Object]"
              routerlink="/"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="home"
                  class="mat-icon ng-tns-c48-0 material-icons"
                  role="img"
                >
                  home
                </mat-icon>
                 conduit.menu.home 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c48-0 mat-button _mat-animation-noopable"
              href="/editor"
              mat-button=""
              ng-reflect-link-params="/editor"
              ng-reflect-router-link="/editor"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/editor"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="edit"
                  class="mat-icon ng-tns-c48-0 material-icons"
                  role="img"
                >
                  edit
                </mat-icon>
                 conduit.menu.newarticle 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/editor"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c48-0 mat-button _mat-animation-noopable"
              href="/settings"
              mat-button=""
              ng-reflect-link-params="/settings"
              ng-reflect-router-link="/settings"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/settings"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="settings"
                  class="mat-icon ng-tns-c48-0 material-icons"
                  role="img"
                >
                  settings
                </mat-icon>
                 conduit.menu.settings 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/settings"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c48-0 mat-button _mat-animation-noopable"
              href="/profile/usernam"
              mat-button=""
              ng-reflect-link-params="/profile,usernam"
              ng-reflect-router-link="/profile,usernam"
              ng-reflect-router-link-active="mat-accent"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                usernam
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/profile/usern"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
          </div>
        </span>
      </mat-toolbar>
    </div>
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="app-preloader mat-progress-bar mat-primary _mat-animation-noopable"
      hidden=""
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-6"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-6')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
  </header>
</app-header>
`;

exports[`HeaderComponent should show header for unknown user by "loggedIn" @Input equals to false 1`] = `
<app-header
  changeLanguage={[Function EventEmitter]}
  loggedIn="false"
  showLoader="false"
  toggleSideNave={[Function EventEmitter]}
  user={[Function Object]}
>
  <header
    class="header"
  >
    <mat-toolbar
      class="mat-toolbar mat-primary mat-toolbar-single-row"
      color="primary"
      ng-reflect-color="primary"
    >
      <button
        class="mat-icon-button ng-tns-c56-0 _mat-animation-noopable"
        mat-icon-button=""
      >
        <span
          class="mat-button-wrapper"
        >
          <mat-icon
            aria-hidden="true"
            aria-label="view_headline"
            class="mat-icon ng-tns-c56-0 material-icons"
            role="img"
          >
            view_headline
          </mat-icon>
        </span>
        <div
          class="mat-button-ripple mat-ripple mat-button-ripple-round"
          matripple=""
          ng-reflect-centered="true"
          ng-reflect-disabled="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        />
        <div
          class="mat-button-focus-overlay"
        />
      </button>
      <span
        class="header__main ng-tns-c56-0"
      >
        <a
          class="logo"
          href="/"
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          routerlink="/"
        >
          conduit.logo
        </a>
      </span>
      
      <span
        class="d-none d-md-block ng-tns-c56-0 ng-star-inserted"
      >
        <a
          aria-disabled="false"
          class="ng-tns-c56-0 mat-button _mat-animation-noopable"
          href="/"
          mat-button=""
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="home"
              class="mat-icon ng-tns-c56-0 material-icons"
              role="img"
            >
              home
            </mat-icon>
             conduit.menu.home 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c56-0 mat-button _mat-animation-noopable"
          href="/login"
          mat-button=""
          ng-reflect-link-params="/login"
          ng-reflect-router-link="/login"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/login"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="lock"
              class="mat-icon ng-tns-c56-0 material-icons"
              role="img"
            >
              lock
            </mat-icon>
             conduit.menu.login 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/login"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c56-0 mat-button _mat-animation-noopable"
          href="/register"
          mat-button=""
          ng-reflect-link-params="/register"
          ng-reflect-router-link="/register"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/register"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="vpn_key"
              class="mat-icon ng-tns-c56-0 material-icons"
              role="img"
            >
              vpn_key
            </mat-icon>
             conduit.menu.register 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/register"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
      </span>
      
      <span
        class="header_lang d-block d-md-none mr-2 ng-tns-c56-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c61-1 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-14"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c61-1 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
      
      <span
        class="header_lang d-none d-md-block ng-tns-c56-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c61-2 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-15"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c61-2 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
    </mat-toolbar>
    <div
      class="d-block d-md-none header__mobile"
    >
      <mat-toolbar
        class="mat-toolbar mat-primary mat-toolbar-single-row"
        color="primary"
        ng-reflect-color="primary"
      >
        
        <span
          class="header__menu-wrap ng-tns-c56-0 ng-star-inserted"
        >
          <div
            class="header__menu-links"
          >
            <a
              aria-disabled="false"
              class="ng-tns-c56-0 mat-button _mat-animation-noopable"
              href="/"
              mat-button=""
              ng-reflect-link-params="/"
              ng-reflect-router-link="/"
              ng-reflect-router-link-active="mat-accent"
              ng-reflect-router-link-active-options="[object Object]"
              routerlink="/"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="home"
                  class="mat-icon ng-tns-c56-0 material-icons"
                  role="img"
                >
                  home
                </mat-icon>
                 conduit.menu.home 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c56-0 mat-button _mat-animation-noopable"
              href="/login"
              mat-button=""
              ng-reflect-link-params="/login"
              ng-reflect-router-link="/login"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/login"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="lock"
                  class="mat-icon ng-tns-c56-0 material-icons"
                  role="img"
                >
                  lock
                </mat-icon>
                 conduit.menu.login 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/login"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c56-0 mat-button _mat-animation-noopable"
              href="/register"
              mat-button=""
              ng-reflect-link-params="/register"
              ng-reflect-router-link="/register"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/register"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="vpn_key"
                  class="mat-icon ng-tns-c56-0 material-icons"
                  role="img"
                >
                  vpn_key
                </mat-icon>
                 conduit.menu.register 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/register"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
          </div>
        </span>
        
      </mat-toolbar>
    </div>
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="app-preloader mat-progress-bar mat-primary _mat-animation-noopable"
      hidden=""
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-7"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-7')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
  </header>
</app-header>
`;

exports[`HeaderComponent should show showLoader by "showLoader" @Input 1`] = `
<app-header
  changeLanguage={[Function EventEmitter]}
  loggedIn="false"
  showLoader={[Function Boolean]}
  toggleSideNave={[Function EventEmitter]}
  user={[Function Object]}
>
  <header
    class="header"
  >
    <mat-toolbar
      class="mat-toolbar mat-primary mat-toolbar-single-row"
      color="primary"
      ng-reflect-color="primary"
    >
      <button
        class="mat-icon-button ng-tns-c40-0 _mat-animation-noopable"
        mat-icon-button=""
      >
        <span
          class="mat-button-wrapper"
        >
          <mat-icon
            aria-hidden="true"
            aria-label="view_headline"
            class="mat-icon ng-tns-c40-0 material-icons"
            role="img"
          >
            view_headline
          </mat-icon>
        </span>
        <div
          class="mat-button-ripple mat-ripple mat-button-ripple-round"
          matripple=""
          ng-reflect-centered="true"
          ng-reflect-disabled="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        />
        <div
          class="mat-button-focus-overlay"
        />
      </button>
      <span
        class="header__main ng-tns-c40-0"
      >
        <a
          class="logo"
          href="/"
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          routerlink="/"
        >
          conduit.logo
        </a>
      </span>
      
      <span
        class="d-none d-md-block ng-tns-c40-0 ng-star-inserted"
      >
        <a
          aria-disabled="false"
          class="ng-tns-c40-0 mat-button _mat-animation-noopable"
          href="/"
          mat-button=""
          ng-reflect-link-params="/"
          ng-reflect-router-link="/"
          ng-reflect-router-link-active="mat-accent"
          ng-reflect-router-link-active-options="[object Object]"
          routerlink="/"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="home"
              class="mat-icon ng-tns-c40-0 material-icons"
              role="img"
            >
              home
            </mat-icon>
             conduit.menu.home 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c40-0 mat-button _mat-animation-noopable"
          href="/login"
          mat-button=""
          ng-reflect-link-params="/login"
          ng-reflect-router-link="/login"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/login"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="lock"
              class="mat-icon ng-tns-c40-0 material-icons"
              role="img"
            >
              lock
            </mat-icon>
             conduit.menu.login 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/login"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
        <a
          aria-disabled="false"
          class="ng-tns-c40-0 mat-button _mat-animation-noopable"
          href="/register"
          mat-button=""
          ng-reflect-link-params="/register"
          ng-reflect-router-link="/register"
          ng-reflect-router-link-active="mat-accent"
          routerlink="/register"
          routerlinkactive="mat-accent"
          tabindex="0"
        >
          <span
            class="mat-button-wrapper"
          >
            <mat-icon
              aria-hidden="true"
              aria-label="vpn_key"
              class="mat-icon ng-tns-c40-0 material-icons"
              role="img"
            >
              vpn_key
            </mat-icon>
             conduit.menu.register 
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="http://localhost/register"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </a>
      </span>
      
      <span
        class="header_lang d-block d-md-none mr-2 ng-tns-c40-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c45-1 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-10"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c45-1 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
      
      <span
        class="header_lang d-none d-md-block ng-tns-c40-0"
      >
        <mat-select
          aria-disabled="false"
          aria-invalid="false"
          aria-multiselectable="false"
          aria-required="false"
          class="mat-select ng-tns-c45-2 ng-untouched ng-pristine ng-valid mat-select-empty"
          id="mat-select-11"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            cdk-overlay-origin=""
            class="mat-select-trigger"
          >
            <div
              class="mat-select-value"
              ng-reflect-ng-switch="true"
            >
              
              <span
                class="mat-select-placeholder ng-tns-c45-2 ng-star-inserted"
              >
                 
              </span>
              
            </div>
            <div
              class="mat-select-arrow-wrapper"
            >
              <div
                class="mat-select-arrow"
              />
            </div>
          </div>
          
        </mat-select>
      </span>
    </mat-toolbar>
    <div
      class="d-block d-md-none header__mobile"
    >
      <mat-toolbar
        class="mat-toolbar mat-primary mat-toolbar-single-row"
        color="primary"
        ng-reflect-color="primary"
      >
        
        <span
          class="header__menu-wrap ng-tns-c40-0 ng-star-inserted"
        >
          <div
            class="header__menu-links"
          >
            <a
              aria-disabled="false"
              class="ng-tns-c40-0 mat-button _mat-animation-noopable"
              href="/"
              mat-button=""
              ng-reflect-link-params="/"
              ng-reflect-router-link="/"
              ng-reflect-router-link-active="mat-accent"
              ng-reflect-router-link-active-options="[object Object]"
              routerlink="/"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="home"
                  class="mat-icon ng-tns-c40-0 material-icons"
                  role="img"
                >
                  home
                </mat-icon>
                 conduit.menu.home 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c40-0 mat-button _mat-animation-noopable"
              href="/login"
              mat-button=""
              ng-reflect-link-params="/login"
              ng-reflect-router-link="/login"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/login"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="lock"
                  class="mat-icon ng-tns-c40-0 material-icons"
                  role="img"
                >
                  lock
                </mat-icon>
                 conduit.menu.login 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/login"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
            <a
              aria-disabled="false"
              class="ng-tns-c40-0 mat-button _mat-animation-noopable"
              href="/register"
              mat-button=""
              ng-reflect-link-params="/register"
              ng-reflect-router-link="/register"
              ng-reflect-router-link-active="mat-accent"
              routerlink="/register"
              routerlinkactive="mat-accent"
              tabindex="0"
            >
              <span
                class="mat-button-wrapper"
              >
                <mat-icon
                  aria-hidden="true"
                  aria-label="vpn_key"
                  class="mat-icon ng-tns-c40-0 material-icons"
                  role="img"
                >
                  vpn_key
                </mat-icon>
                 conduit.menu.register 
              </span>
              <div
                class="mat-button-ripple mat-ripple"
                matripple=""
                ng-reflect-centered="false"
                ng-reflect-disabled="false"
                ng-reflect-trigger="http://localhost/register"
              />
              <div
                class="mat-button-focus-overlay"
              />
            </a>
          </div>
        </span>
        
      </mat-toolbar>
    </div>
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="app-preloader mat-progress-bar mat-primary _mat-animation-noopable"
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-5"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-5')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
  </header>
</app-header>
`;
